# research-center-quality-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  EDA_and_Model.ipynb  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt
models/: kmeans_research_centers.pkl  research_center_pipeline.pkl
notebooks/: eda.ipynb  research_center_seg.ipynb
