[project]
name = "research-center-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.42.0",
]
